# GameLoop

./: .gitignore  BUILD  CMakeLists.txt  README.md
conf/: Default_Settings.conf
cpp/: Settings.cpp  main.cpp
h/: Events.h  GameLoop.h  Rectangle.h  SDLWindow.h  Settings.h
